--- a/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
@@ -11,6 +11,15 @@
             fx:controller="trashsoftware.trashSnooker.fxml.MainView"
             prefHeight="400.0" prefWidth="300.0" spacing="20.0" alignment="CENTER">
 
+    <VBox spacing="5.0" alignment="CENTER">
+        <ComboBox fx:id="player1Box"/>
+        <Label text="VS"/>
+        <ComboBox fx:id="player2Box"/>
+        <Button text="添加球员" onAction="#addPlayerAction"/>
+    </VBox>
+
+    <Separator/>
+
     <Button text="斯诺克" onAction="#snookerAction"/>
     <Button text="斯诺克（小台）" onAction="#miniSnookerAction"/>
     <Button text="中式八球" onAction="#chineseEightAction"/>
