--- a/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
@@ -11,17 +11,26 @@
             fx:controller="trashsoftware.trashSnooker.fxml.MainView"
             prefHeight="400.0" prefWidth="300.0" spacing="20.0" alignment="CENTER">
 
-    <VBox spacing="5.0" alignment="CENTER">
+    <GridPane vgap="5.0" hgap="10.0" alignment="CENTER">
+        <columnConstraints>
+            <ColumnConstraints halignment="CENTER"/>
+            <ColumnConstraints halignment="CENTER"/>
+        </columnConstraints>
+
         <ComboBox fx:id="player1Box"/>
-        <Label text="VS"/>
-        <ComboBox fx:id="player2Box"/>
-        <Button text="添加球员" onAction="#addPlayerAction"/>
-    </VBox>
+        <ComboBox fx:id="player1CueBox" GridPane.columnIndex="1"/>
+        <Label text="VS" GridPane.rowIndex="1" GridPane.columnSpan="2"/>
+        <ComboBox fx:id="player2Box" GridPane.rowIndex="2"/>
+        <ComboBox fx:id="player2CueBox" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+        <Button text="添加球员" onAction="#addPlayerAction"
+                GridPane.rowIndex="3" GridPane.columnSpan="2"/>
+    </GridPane>
 
     <Separator/>
 
     <Button text="斯诺克" onAction="#snookerAction"/>
     <Button text="斯诺克（小台）" onAction="#miniSnookerAction"/>
     <Button text="中式八球" onAction="#chineseEightAction"/>
+    <Button text="花式九球" onAction="#sidePocketAction"/>
 
 </VBox>
