--- a/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/gameView.fxml
@@ -29,6 +29,7 @@
         <Menu text="游戏">
             <MenuItem text="设置" onAction="#settingsAction"/>
             <SeparatorMenuItem/>
+            <MenuItem text="保存" onAction="#saveGameAction"/>
             <MenuItem text="新游戏" onAction="#newGameAction"/>
             <MenuItem text="认输" onAction="#withdrawAction" fx:id="withdrawMenu"/>
             <MenuItem text="重新放置手中球" fx:id="replaceBallInHandMenu" disable="true"/>
@@ -59,12 +60,22 @@
                 <ColumnConstraints halignment="CENTER" percentWidth="40.0"/>
                 <ColumnConstraints halignment="RIGHT" percentWidth="30.0"/>
             </columnConstraints>
+            <rowConstraints>
+                <RowConstraints/>
+                <RowConstraints/>
+            </rowConstraints>
+            
             <HBox alignment="CENTER_LEFT" spacing="20.0">
                 <Label fx:id="player1Label" text="Player 1"/>
                 <Label fx:id="player1ScoreLabel" text="0"/>
                 <Canvas fx:id="player1TarCanvas"/>
             </HBox>
-            <HBox alignment="CENTER" spacing="10.0" GridPane.columnIndex="1">
+            <HBox GridPane.columnIndex="1" alignment="CENTER" spacing="5.0">
+                <Label fx:id="player1FramesLabel" text="0"/>
+                <Label fx:id="totalFramesLabel" text="(9)"/>
+                <Label fx:id="player2FramesLabel" text="0"/>
+            </HBox>
+            <HBox alignment="CENTER" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                 <Label fx:id="singlePoleLabel" text="0"/>
                 <Canvas fx:id="singlePoleCanvas"/>
             </HBox>
