Bug fixes and record by opponent

--- a/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
@@ -41,4 +41,8 @@
     <Button text="中式八球" onAction="#chineseEightAction"/>
     <Button text="花式九球" onAction="#sidePocketAction"/>
 
+    <Separator/>
+
+    <Button fx:id="resumeButton" text="恢复上次游戏" onAction="#resumeAction"/>
+
 </VBox>
