Game recording and replay
游戏录像和回放

--- a/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
@@ -10,6 +10,7 @@
     <MenuBar>
         <Menu text="文件">
             <MenuItem text="纪录" onAction="#recordsAction"/>
+            <MenuItem text="回放" onAction="#replayAction"/>
         </Menu>
     </MenuBar>
 
