Table cloth prefs

--- a/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
@@ -5,7 +5,7 @@
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="trashsoftware.trashSnooker.fxml.MainView"
-      prefHeight="400.0" prefWidth="400.0" spacing="20.0" alignment="TOP_CENTER">
+      prefHeight="400.0" prefWidth="400.0" spacing="10.0" alignment="TOP_CENTER">
 
     <MenuBar>
         <Menu text="文件">
@@ -40,6 +40,12 @@
         <Label text="总局数"/>
         <ComboBox fx:id="totalFramesBox">
         </ComboBox>
+    </HBox>
+    
+    <HBox spacing="10.0" alignment="CENTER">
+        <Label text="台泥/桌布"/>
+        <ComboBox fx:id="clothSmoothBox"/>
+        <ComboBox fx:id="clothGoodBox"/>
     </HBox>
 
     <Button text="斯诺克" onAction="#snookerAction"/>
