--- a/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/mainView.fxml
@@ -35,6 +35,13 @@
     </GridPane>
 
     <Separator/>
+    
+    <HBox spacing="10.0" alignment="CENTER">
+        <Label text="规则/球桌/球"/>
+        <ComboBox fx:id="gameRuleBox"/>
+        <ComboBox fx:id="tableMetricsBox"/>
+        <ComboBox fx:id="ballMetricsBox"/>
+    </HBox>
 
     <HBox spacing="10.0" alignment="CENTER">
         <Label text="总局数"/>
@@ -48,10 +55,12 @@
         <ComboBox fx:id="clothGoodBox"/>
     </HBox>
 
-    <Button text="斯诺克" onAction="#snookerAction"/>
-    <Button text="斯诺克（小台）" onAction="#miniSnookerAction"/>
-    <Button text="中式八球" onAction="#chineseEightAction"/>
-    <Button text="花式九球" onAction="#sidePocketAction"/>
+    <HBox spacing="10.0" alignment="CENTER">
+        <Label text="洞口"/>
+        <ComboBox fx:id="holeSizeBox"/>
+    </HBox>
+
+    <Button text="开始游戏" onAction="#startGameAction"/>
 
     <Separator/>
 
