--- a/src/main/resources/trashsoftware/trashSnooker/fxml/careerView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/careerView.fxml
@@ -21,6 +21,11 @@
     </columnConstraints>
 
     <VBox GridPane.rowIndex="1" spacing="10.0">
+        <HBox spacing="10.0">
+            <Label fx:id="levelLabel"/>
+            <ProgressBar fx:id="levelExpBar" prefWidth="180.0"/>
+            <Label fx:id="levelExpLabel"/>
+        </HBox>
         <AbilityShower fx:id="abilityShower"/>
         <HBox spacing="20.0" alignment="CENTER">
             <HBox alignment="CENTER">
