--- a/src/main/resources/trashsoftware/trashSnooker/fxml/entryView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/entryView.fxml
@@ -1,40 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.TableColumn?>
 <VBox xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="trashsoftware.trashSnooker.fxml.EntryView"
-      prefHeight="400.0" prefWidth="300.0" alignment="CENTER" spacing="10.0">
-    
-    <padding>
-        <Insets topRightBottomLeft="10.0"/>
-    </padding>
+      prefHeight="400.0" prefWidth="300.0">
 
-    <Label text="Trash snooker">
-        <font>
-            <Font size="18"/>
-        </font>
-    </Label>
+    <MenuBar>
+        <Menu text="文件">
+            <MenuItem text="纪录" onAction="#recordsAction"/>
+            <MenuItem text="回放" onAction="#replayAction"/>
+        </Menu>
+    </MenuBar>
 
-    <TableView fx:id="careersTable">
-        <columns>
-            <TableColumn text="玩家" fx:id="playerColumn"/>
-<!--            <TableColumn text="比赛"/>-->
-        </columns>
-    </TableView>
-    
-    <HBox spacing="10.0" alignment="CENTER">
-        <Button text="继续游戏" onAction="#continueCareer" fx:id="continueCareerBtn" disable="true"/>
-        <Button text="开始新游戏" onAction="#newCareer"/>
-    </HBox>
-    
-    <Button text="快速游戏" onAction="#fastGame"/>
+    <VBox spacing="10.0" alignment="CENTER">
+        <padding>
+            <Insets topRightBottomLeft="10.0"/>
+        </padding>
 
+
+        <Label text="Trash snooker">
+            <font>
+                <Font size="18"/>
+            </font>
+        </Label>
+
+        <TableView fx:id="careersTable">
+            <columns>
+                <TableColumn text="玩家" fx:id="playerColumn"/>
+                <!--            <TableColumn text="比赛"/>-->
+            </columns>
+        </TableView>
+
+        <HBox spacing="10.0" alignment="CENTER">
+            <Button text="继续游戏" onAction="#continueCareer" fx:id="continueCareerBtn"
+                    disable="true"/>
+            <Button text="开始新游戏" onAction="#newCareer"/>
+        </HBox>
+
+        <Button text="快速游戏" onAction="#fastGame"/>
+    </VBox>
 </VBox>
