--- a/src/main/resources/trashsoftware/trashSnooker/fxml/newCareerView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/newCareerView.fxml
@@ -15,32 +15,55 @@
         <ColumnConstraints halignment="CENTER"/>
         <ColumnConstraints halignment="LEFT"/>
     </columnConstraints>
-
-    <Label text="新建球员" GridPane.columnSpan="2"/>
-
-    <Label text="玩家名" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-    <TextField fx:id="nameField" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-
-    <Label text="惯用手" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-    <ComboBox fx:id="handBox" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-
-    <Button text="创建玩家" onAction="#createPlayer" GridPane.rowIndex="3" GridPane.columnSpan="2"/>
     
-    <Separator orientation="VERTICAL" GridPane.columnIndex="2" GridPane.rowSpan="4"/>
+    <Label text="难度" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+    <ComboBox fx:id="playerGoodnessBox" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+    <Label text="AI强度" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+    <ComboBox fx:id="aiGoodnessBox" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+    
+    <Separator GridPane.rowIndex="2" GridPane.columnSpan="5"/>
 
-    <Label text="已有球员" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
+    <Label text="新建球员" GridPane.rowIndex="3" GridPane.columnSpan="2"/>
+
+    <Label text="玩家名" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+    <TextField fx:id="nameField" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+    
+    <Label text="性别(?)" GridPane.rowIndex="5">
+        <tooltip>
+            <Tooltip text="女性选手初始力量值较低，但在某些规则中享受让分或让球"/>
+        </tooltip>
+    </Label>
+    
+    <ComboBox fx:id="sexBox" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+    
+    <Label text="身高(?)" GridPane.rowIndex="6">
+        <tooltip>
+            <Tooltip text="身高越高，架杆能力初始值越低"/>
+        </tooltip>
+    </Label>
+
+    <ComboBox fx:id="heightBox" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+
+    <Label text="惯用手" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
+    <ComboBox fx:id="handBox" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+
+    <Button text="创建玩家" onAction="#createPlayer" GridPane.rowIndex="8" GridPane.columnSpan="2"/>
+    
+    <Separator orientation="VERTICAL" GridPane.rowIndex="3" GridPane.columnIndex="2" GridPane.rowSpan="4"/>
+
+    <Label text="已有球员" GridPane.rowIndex="3" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
 
     <Button text="(i)" fx:id="playerInfoBtn" onAction="#playerInfoAction" disable="true" 
-            GridPane.rowIndex="1" GridPane.columnIndex="3"/>
-    <ComboBox fx:id="existingPlayersBox" GridPane.rowIndex="1" GridPane.columnIndex="4"/>
+            GridPane.rowIndex="4" GridPane.columnIndex="3"/>
+    <ComboBox fx:id="existingPlayersBox" GridPane.rowIndex="4" GridPane.columnIndex="4"/>
     
     <Label text="使用已有球员将禁用加点系统" 
-           GridPane.rowIndex="2" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
+           GridPane.rowIndex="5" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
 
     <Button text="使用球员" fx:id="usePlayerButton" onAction="#usePlayerAction"
             disable="true"
-            GridPane.rowIndex="3" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
+            GridPane.rowIndex="6" GridPane.columnIndex="3" GridPane.columnSpan="2"/>
     
-    <Label fx:id="promptLabel" GridPane.rowIndex="4" GridPane.columnSpan="5"/>
+    <Label fx:id="promptLabel" GridPane.rowIndex="9" GridPane.columnSpan="5"/>
 
 </GridPane>
