--- a/src/main/resources/trashsoftware/trashSnooker/fxml/alert/alert.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/alert/alert.fxml
@@ -23,6 +23,9 @@
     </Label>
     <Label fx:id="contentText"/>
     
+    <VBox fx:id="additionalPane">
+    </VBox>
+    
     <HBox spacing="10.0" alignment="BOTTOM_RIGHT" VBox.vgrow="ALWAYS">
         <Button fx:id="yesButton" text="是" minWidth="50.0"/>
         <Button fx:id="noButton" text="否" minWidth="50.0"/>
