--- a/src/main/resources/trashsoftware/trashSnooker/fxml/careerView.fxml
+++ b/src/main/resources/trashsoftware/trashSnooker/fxml/careerView.fxml
@@ -31,8 +31,8 @@
                 <Label text="可用技能点："/>
                 <Label fx:id="availPerksLabel"/>
             </HBox>
-            <Button text="重置" fx:id="clearPerkBtn" onAction="#clearUsedPerks"/>
-            <Button text="确定分配" fx:id="confirmAddPerkBtn" onAction="#applyPerks"/>
+            <Button text="%restorePerks" fx:id="clearPerkBtn" onAction="#clearUsedPerks"/>
+            <Button text="%applyPerks" fx:id="confirmAddPerkBtn" onAction="#applyPerks"/>
         </HBox>
     </VBox>
 
@@ -43,21 +43,21 @@
     <LabelTable fx:id="allAwardsTable" GridPane.rowIndex="6"/>
 
     <HBox GridPane.columnIndex="1" GridPane.rowIndex="0" spacing="10.0">
-        <Label text="世界排名"/>
+        <Label text="%worldRanking"/>
         <ComboBox fx:id="rankTypeBox"/>
 
         <Separator orientation="VERTICAL"/>
-        <Label text="排名方式"/>
+        <Label text="%rankingType"/>
         <ComboBox fx:id="rankMethodBox"/>
     </HBox>
 
     <TableView fx:id="rankingTable" prefWidth="360.0" prefHeight="360.0"
                GridPane.rowIndex="1" GridPane.columnIndex="1">
         <columns>
-            <TableColumn text="排名" fx:id="rankCol"/>
-            <TableColumn text="球员" fx:id="rankNameCol"/>
-            <TableColumn text="奖金" fx:id="rankedAwardCol"/>
-            <TableColumn text="生涯总奖金" fx:id="totalAwardCol"/>
+            <TableColumn text="%rankRank" fx:id="rankCol"/>
+            <TableColumn text="%rankName" fx:id="rankNameCol"/>
+            <TableColumn text="%rankAwards" fx:id="rankedAwardCol"/>
+            <TableColumn text="%rankTotalAwards" fx:id="totalAwardCol"/>
         </columns>
     </TableView>
 
@@ -67,20 +67,20 @@
 
     <VBox fx:id="champInProgBox" GridPane.rowIndex="5" GridPane.columnIndex="1" spacing="10.0">
         <HBox spacing="10.0">
-            <Label text="正在进行的比赛"/>
+            <Label text="%tourInProgress"/>
             <Label fx:id="champInProgLabel"/>
             <Label fx:id="champInProgStageLabel"/>
-            <Button text="继续" onAction="#continueChampInProg"/>
+            <Button text="%continueTour" onAction="#continueChampInProg"/>
         </HBox>
     </VBox>
 
     <VBox fx:id="nextChampInfoBox" GridPane.rowIndex="5" GridPane.columnIndex="1" spacing="10.0">
         <HBox spacing="10.0">
-            <Label text="下场比赛"/>
+            <Label text="%nextTour"/>
             <Label fx:id="nextChampionshipLabel"/>
-            <CheckBox fx:id="joinChampBox" text="报名"/>
-            <Button text="开始" onAction="#nextChamp"/>
-            <Button fx:id="skipChampBtn" text="跳过" onAction="#skipNextChamp"/>
+            <CheckBox fx:id="joinChampBox" text="%enrol"/>
+            <Button text="%start" onAction="#nextChamp"/>
+            <Button fx:id="skipChampBtn" text="%skip" onAction="#skipNextChamp"/>
         </HBox>
     </VBox>
 
